Files for Skills finished & conditions Set up
Forgotten code for last check in. Skills et cetera

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -792,38 +792,6 @@ div.sheet-quarterPage
 	box-sizing: content-box;
 }
 
-
-tr.sheet-skill,
-tr.sheet-specialty,
-p.sheet-skill,
-p.sheet-specialty
-{
-	width: 128px;
-	box-sizing: content-box;
-	text-align: left;
-}
-
-tr.sheet-skill, p.sheet-skill, td.sheet-skill
-{
-}
-
-tr.sheet-specialty,
-p.sheet-specialty
-{
-	text-indent: 10px;
-}
-
-td.sheet-skilldice
-{
-	text-indent: -30px;
-}
-
-td.sheet-right,
-p.sheet-right
-{
-	text-align: right;
-}
-
 td.sheet-smallCell
 {
 	width: 30px;
@@ -1131,6 +1099,9 @@ input[type="checkbox"]:checked.sheet-D6 + span::before
 /* Roll Button Appearance*/
 button[type=roll].sheet-rollButton::before
 {
+	content: "0";
+	font-family: "dicefontd10";
+	font-size: 16px;
 }
 
 /* ******************************* */
@@ -1143,12 +1114,13 @@ button[type=roll].sheet-rollButton::before
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 28px 1fr;
 	grid-gap: 0px;
-	height: 140px;
+	height: 120px;
 	grid-template-areas: "ID ID" "crewAspect crewSpecies";
 }
+
 .sheet-crewID
 {
-	width: 890px;
+	width: 900px;
 	grid-area: ID;
 	display: grid;
 	grid-template-columns: 1fr 5fr 1fr 5fr;
@@ -1156,6 +1128,7 @@ button[type=roll].sheet-rollButton::before
 	grid-gap: 0px;
 	height: 24px;
 	z-index: 0;
+	align-self: center;
 }
 
 .sheet-alias
@@ -1210,7 +1183,7 @@ button[type=roll].sheet-rollButton::before
 
 .sheet-crewAspects
 {
-	width: 430px;
+	width: 440px;
 	padding: 5px;
 	display: grid;
 	grid-area: crewAspect;
@@ -1219,6 +1192,8 @@ button[type=roll].sheet-rollButton::before
 	grid-gap: 0px;
 	height: 108px;
 	z-index: 0;
+	align-self: center;
+	justify-self: start;
 }
 
 .sheet-departmentA
@@ -1267,20 +1242,37 @@ button[type=roll].sheet-rollButton::before
 	grid-row-end: 3;
 }
 
+.sheet-aspectText
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 14px;
+}
+
+.sheet-aspectTextbox
+{
+	align-self: stretch;
+	flex-flow: nowrap;
+	font-size: 12px;
+	width: 100%;
+}
+
 .sheet-species
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/species.png);
-	background-size: 440px 131px;
+	background-size: 430px 128.1px;
 	background-repeat: no-repeat;
-	width: 440px;
+	width: 420px;
 	padding: 5px;
 	display: grid;
 	grid-area: crewSpecies;
-	grid-template-columns: repeat(2, 100px 1fr);
-	grid-template-rows: 18px repeat(5,minmax(15px,18px));
+	grid-template-columns: repeat(2, 85px 1fr);
+	grid-template-rows: 20px repeat(5,minmax(15px,18px));
 	grid-gap: 0px;
-	height: 130px;
+	height: 126px;
 	z-index: 0;
+	align-self: center;
+	justify-self: start;
 }
 
 .sheet-speciesTitle
@@ -1289,11 +1281,12 @@ button[type=roll].sheet-rollButton::before
 	flex-flow: nowrap;
 	font-variant: small-caps;
 	font-weight: 500;
-	font-size: 13px;
+	font-size: 14px;
 	grid-column-start: 1;
 	grid-column-end: 5;
 	grid-row-start: 1;
 	grid-row-end: 2;
+	padding-top: 4px;
 }
 
 .sheet-speciesName
@@ -1447,6 +1440,174 @@ button[type=roll].sheet-rollButton::before
 	grid-column-end: 7;
 	grid-row-start: 3;
 	grid-row-end: 4;
+}
+
+/* ******************************* */
+/*			Skills				   */
+/* ******************************* */
+.sheet-skillRow
+{
+	width: 900px;
+	display: grid;
+	grid-template-columns: repeat(4,1fr);
+	grid-template-rows: 36px 1fr 1fr 78px;
+	grid-gap: 0px;
+	height: 410px;
+	grid-template-areas: "Title Title Title Conditions" "Skills1 Skills2 Skills3 Conditions" "Skills1 Skills2 Skills3 Pathogens" "Skills1 Skills2 Skills3 Upkeep";
+}
+
+.sheet-skillHeader
+{
+	grid-area: Title;
+}
+
+.sheet-skills
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/skills.png);
+	background-size: 220px 370px;
+	background-repeat: no-repeat;
+	width: 220px;
+	display: grid;
+	grid-template-columns: 8px 8px 1fr 40px 64px;
+	grid-template-rows: 22px repeat(5, 25px minmax(12px, 14px) minmax(12px, 14px) minmax(12px, 14px)) 1fr;
+	grid-gap: 0px;
+	height: 370px;
+	z-index: 0;
+	align-self: center;
+	justify-self: start;
+}
+
+.sheet-skills1
+{
+	grid-area: Skills1;
+}
+
+.sheet-skills2
+{
+	grid-area: Skills2;
+}
+
+.sheet-skills3
+{
+	grid-area: Skills3;
+}
+
+.sheet-department
+{
+	grid-column-start: 1;
+	grid-column-end: 4;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 14px;
+	font-variant: small-caps;
+	padding-top: 5px;
+	padding-left: 5px;
+}
+
+.sheet-skill
+{
+	grid-column-start: 2;
+	grid-column-end: 4;
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 13px;
+	padding-top: 4px;
+}
+
+.sheet-specialty
+{
+	grid-column-start: 3;
+	grid-column-end: 5;
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 12px;
+	vertical-align: middle;
+}
+
+.sheet-skilldice
+{
+	grid-column-start: 4;
+	grid-column-end: 5;
+	text-align: start;
+	flex-flow: nowrap;
+	padding-top: 4px;
+}
+
+.sheet-specialtydice
+{
+	grid-column-start: 5;
+	grid-column-end: 6;
+	text-align: start;
+	flex-flow: nowrap;
+}
+
+.sheet-skillRollButton
+{
+	grid-column-start: 5;
+	grid-column-end: 6;
+	text-align: end;
+	flex-flow: nowrap;
+	margin-right: 2px;
+	padding-top: 2px;
+}
+
+.sheet-crewConditions
+{
+	grid-area: Conditions;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/conditionPathogen.png);
+	background-size: 220px 156.3px;
+	background-repeat: no-repeat;
+	width: 220px;
+	display: grid;
+	grid-template-columns: 8px 8px 1fr 40px 64px;
+	grid-template-rows: 22px repeat(5, 25px minmax(12px, 14px)) 1fr;
+	grid-gap: 0px;
+	height: 156px;
+	z-index: 0;
+	align-self: start;
+	justify-self: start;
+}
+
+.sheet-pathogen
+{
+	grid-area: Pathogens;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/conditionPathogen.png);
+	background-size: 220px 156.3px;
+	background-repeat: no-repeat;
+	width: 220px;
+	display: grid;
+	grid-template-columns: 8px 8px 1fr 40px 64px;
+	grid-template-rows: 22px repeat(5, 25px minmax(12px, 14px)) 1fr;
+	grid-gap: 0px;
+	height: 156px;
+	z-index: 0;
+	align-self: start;
+	justify-self: start;
+}
+.sheet-upkeep
+{
+	grid-area: Upkeep;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/upkeep.png);
+	background-size: 220px 77px;
+	background-repeat: no-repeat;
+	width: 220px;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 18px 1fr;
+	grid-gap: 0px;
+	height: 77px;
+	z-index: 0;
+	align-self: start;
+	justify-self: start;
+}
+
+input[type="number"].sheet-upkeepBox
+{
+	height: 59px;
+	width: 220px;
+	font-size: 18px;
 }
 
 /* ******************************* */
@@ -2199,6 +2360,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 4;
 	grid-row-end: 5;
 }
+
 .sheet-amenityList5
 {
 	text-align: start;
@@ -4194,7 +4356,7 @@ input[type="number"].sheet-resourceBox
 	width: 440px;
 	padding-top: 0px;
 	padding-left: 4px;
-	padding-right:8px;
+	padding-right: 8px;
 	z-index: 0;
 }
 
@@ -4239,7 +4401,7 @@ input[type="number"].sheet-resourceBox
 {
 	font-size: 11px;
 	text-align: center;
-	vertical-align:baseline;
+	vertical-align: baseline;
 	font-variant: small-caps;
 	grid-column-start: 3;
 	grid-column-end: 4;
