Tweaks to Condition Column
Upkeep set up
Pathogens set up

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -1449,11 +1449,12 @@ button[type=roll].sheet-rollButton::before
 {
 	width: 900px;
 	display: grid;
-	grid-template-columns: repeat(4,1fr);
-	grid-template-rows: 36px 1fr 1fr 78px;
+	grid-template-columns: repeat(3,1fr) 220px;
+	grid-template-rows: 36px 1fr 165px 78px;
 	grid-gap: 0px;
 	height: 410px;
 	grid-template-areas: "Title Title Title Conditions" "Skills1 Skills2 Skills3 Conditions" "Skills1 Skills2 Skills3 Pathogens" "Skills1 Skills2 Skills3 Upkeep";
+	justify-content: space-evenly;
 }
 
 .sheet-skillHeader
@@ -1578,14 +1579,29 @@ button[type=roll].sheet-rollButton::before
 	background-repeat: no-repeat;
 	width: 220px;
 	display: grid;
-	grid-template-columns: 8px 8px 1fr 40px 64px;
-	grid-template-rows: 22px repeat(5, 25px minmax(12px, 14px)) 1fr;
+	grid-template-columns: 75px 1fr;
+	grid-template-rows: 25px 1fr;
 	grid-gap: 0px;
 	height: 156px;
 	z-index: 0;
 	align-self: start;
 	justify-self: start;
 }
+
+.sheet-pathogenName
+{
+	padding-top: 4px;
+	padding-right: 10px;
+}
+
+.sheet-pathogenBox
+{
+	padding-left: 6px;
+	padding-bottom: 2px;
+	grid-column-start: 1;
+	grid-column-end: 3;
+}
+
 .sheet-upkeep
 {
 	grid-area: Upkeep;
@@ -1595,18 +1611,33 @@ button[type=roll].sheet-rollButton::before
 	width: 220px;
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-template-rows: 18px 1fr;
+	grid-template-rows: 22px 1fr;
 	grid-gap: 0px;
 	height: 77px;
 	z-index: 0;
 	align-self: start;
 	justify-self: start;
 }
+.sheet-conditionsTitle
+{
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 14px;
+	font-variant: small-caps;
+	padding-top: 5px;
+	padding-left: 5px;
+}
+
+.sheet-upkeepBoxPlacement
+{
+	padding-left: 6px;
+	padding-bottom: 2px;
+}
 
 input[type="number"].sheet-upkeepBox
 {
-	height: 59px;
-	width: 220px;
+	height: 50px;
+	width: 210px;
 	font-size: 18px;
 }
 
