Tweaked crew conditions and updated images
New lighter fill on images
Added Patches images
Built subgrids for crew conditions and patches

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -625,11 +625,12 @@ div.sheet-column700
 /*select & text boxes*/
 select, textarea, input[type="text"], input[type="number"]
 {
-	border-style: hidden;
+	border: none;
 	border-bottom: thin solid #D3D3D3;
 	font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
 	color: #000;
-	height: 100%;
+	height: 1em;
+	line-height: 1em;
 	font-variant: normal;
 }
 
@@ -729,6 +730,7 @@ textarea
 	font-variant: normal;
 	width: 92%;
 	overflow: hidden;
+	resize: none;
 }
 
 	textarea.sheet-description
@@ -1554,7 +1556,7 @@ button[type=roll].sheet-rollButton::before
 	padding-top: 2px;
 }
 
-.sheet-crewConditions
+.sheet-crewConditionsWidget
 {
 	grid-area: Conditions;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/conditionPathogen.png);
@@ -1562,14 +1564,162 @@ button[type=roll].sheet-rollButton::before
 	background-repeat: no-repeat;
 	width: 220px;
 	display: grid;
-	grid-template-columns: 8px 8px 1fr 40px 64px;
-	grid-template-rows: 22px repeat(5, 25px minmax(12px, 14px)) 1fr;
+	grid-template-columns: 20px 1fr 1fr 25px 4px;
+	grid-template-rows: 22px repeat(5, 25px ) 1fr;
 	grid-gap: 0px;
 	height: 156px;
 	z-index: 0;
 	align-self: start;
 	justify-self: start;
 }
+
+.sheet-conditionsTitle
+{
+	grid-column-start: 1;
+	grid-column-end: 6;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 14px;
+	font-variant: small-caps;
+	padding-top: 5px;
+	padding-left: 5px;
+}
+
+.sheet-crewPatchTitle
+{
+	grid-column-start: 1;
+	grid-column-end: 4;
+	grid-row-start: 6;
+	grid-row-end: 7;
+	text-align: start;
+	flex-flow: nowrap;
+	font-size: 13px;
+	padding-top: 0px;
+	padding-left: 5px;
+}
+
+.sheet-conditionCheckbox
+{
+	grid-column-start: 1;
+	grid-column-end: 2;
+}
+
+.sheet-conditionType
+{
+	grid-column-start: 2;
+	grid-column-end: 4;
+}
+
+.sheet-conditionLineAugment
+{
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-conditionLineResilience
+{
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+
+.sheet-conditionLineIntegrity
+{
+	grid-row-start: 4;
+	grid-row-end: 5;
+}
+
+.sheet-conditionLineVitality
+{
+	grid-row-start: 5;
+	grid-row-end: 6;
+}
+
+/* Subgrid for Crew Conditions */
+.sheet-crewConditions
+{
+	grid-column-start: 4;
+	grid-column-end: 5;
+	grid-row-start: 2;
+	grid-row-end: 6;
+	display: grid;
+	grid-template-columns: 25px;
+	grid-template-rows: repeat(4,25px);
+	grid-template-areas: "resiliance2" "resiliance1" "integrity" "vitality";
+	position: relative;
+	justify-self: end;
+}
+
+	.sheet-crewConditions > input
+	{
+		width: 100%;
+		height: 100%;
+		z-index: 1;
+		position: absolute;
+	}
+
+	.sheet-crewConditions > .sheet-resiliance-slot-2
+	{
+		grid-area: resiliance2;
+	}
+
+	.sheet-crewConditions > .sheet-resiliance-slot-1
+	{
+		grid-area: resiliance1;
+	}
+
+	.sheet-crewConditions > .sheet-integrity
+	{
+		grid-area: integrity;
+	}
+
+	.sheet-crewConditions > .sheet-vital
+	{
+		grid-area: vitality;
+	}
+
+
+/* Subgrid for Crew Patches */
+.sheet-crewPatches
+{
+	grid-column-start: 3;
+	grid-column-end: 5;
+	grid-row-start: 6;
+	grid-row-end: 7;
+	display: grid;
+	grid-template-columns: repeat(3,25px);
+	grid-template-rows: 25px;
+	grid-template-areas: "patch1 patch2 patch3";
+	position: relative;
+	justify-self: end;
+}
+
+	.sheet-crewPatches > input
+	{
+		width: 100%;
+		height: 100%;
+		z-index: 1;
+		position: absolute;
+	}
+
+	.sheet-crewPatches > .sheet-patch1
+	{
+		grid-area: patch1;
+	}
+
+
+	.sheet-crewPatches > .sheet-patch2
+	{
+		grid-area: patch2;
+	}
+
+	.sheet-crewPatches > .sheet-patch3
+	{
+		grid-area: patch3;
+	}
+
+
 
 .sheet-pathogen
 {
@@ -1618,7 +1768,7 @@ button[type=roll].sheet-rollButton::before
 	align-self: start;
 	justify-self: start;
 }
-.sheet-conditionsTitle
+.sheet-upkeepPathogenTitle
 {
 	text-align: start;
 	flex-flow: nowrap;
