Updated Crew Integrity
Updated Crew Integrity image
Added crewIntegrity to html and css

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -1688,9 +1688,9 @@ button[type=roll].sheet-rollButton::before
 	grid-row-start: 6;
 	grid-row-end: 7;
 	display: grid;
-	grid-template-columns: repeat(3,25px);
-	grid-template-rows: 25px;
-	grid-template-areas: "patch1 patch2 patch3";
+	grid-template-columns: repeat(5,18px);
+	grid-template-rows: 18px;
+	grid-template-areas: ". patch1 patch2 patch3 .";
 	position: relative;
 	justify-self: end;
 }
@@ -2138,6 +2138,24 @@ input[type="checkbox"] + span.sheet-integrity
 input[type="checkbox"]:checked + span.sheet-integrity
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int2.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"] + span.sheet-crewIntegrity
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/crewIntegrity.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"]:checked + span.sheet-crewIntegrity
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/crewIntegrity2.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	opacity: 1;
