--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -1571,6 +1571,7 @@ button[type=roll].sheet-rollButton::before
 	z-index: 0;
 	align-self: start;
 	justify-self: start;
+	align-items: center;
 }
 
 .sheet-conditionsTitle
@@ -1687,12 +1688,18 @@ button[type=roll].sheet-rollButton::before
 	grid-column-end: 5;
 	grid-row-start: 6;
 	grid-row-end: 7;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/crewPatchBand.png);
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	width: 78px;
+	height: 18px;
 	display: grid;
-	grid-template-columns: repeat(5,18px);
+	grid-template-columns: 10px repeat(3,18px) 10px;
 	grid-template-rows: 18px;
 	grid-template-areas: ". patch1 patch2 patch3 .";
 	position: relative;
 	justify-self: end;
+	align-items: center;
 }
 
 	.sheet-crewPatches > input
@@ -1995,6 +2002,17 @@ input[type="radio"].sheet-largeCheckbox
 	vertical-align: middle;
 }
 
+input[type="checkbox"].sheet-mediumCheckbox,
+input[type="radio"].sheet-mediumCheckbox
+{
+	width: 18px;
+	height: 18px;
+	margin: 0;
+	padding: 0;
+	font-size: 18px;
+	vertical-align: middle;
+}
+
 /*  Image Location  */
 span.sheet-largePips
 {
@@ -2003,6 +2021,15 @@ span.sheet-largePips
 	width: 25px;
 	vertical-align: middle;
 }
+
+span.sheet-mediumPips
+{
+	background-size: 18px 18px;
+	height: 19px;
+	width: 19px;
+	vertical-align: middle;
+}
+
 
 /* Graphics */
 input[type="radio"] + span.sheet-ZeroDie
@@ -2179,6 +2206,25 @@ input[type="checkbox"]:checked + span.sheet-vital
 	opacity: 1;
 	z-index: 2;
 }
+
+input[type="checkbox"] + span.sheet-patch
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/Patches.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"]:checked + span.sheet-patch
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/PatchesFilled.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
 
 /* ***************************************** */
 /*               SHIP SYSTEMS                */
