Tools fixed in CrewKit
All the new code implemented for the tools in the crew kit
Fixed order of Mods on Pulse Array
Renamed Charged Pulse to Damage Boost

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -1680,7 +1680,6 @@ button[type=roll].sheet-rollButton::before
 		grid-area: vitality;
 	}
 
-
 /* Subgrid for Crew Patches */
 .sheet-crewPatches
 {
@@ -1689,9 +1688,10 @@ button[type=roll].sheet-rollButton::before
 	grid-row-start: 6;
 	grid-row-end: 7;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/crewPatchBand.png);
-	background-size: 100% 100%;
+	background-size: 100% 75%;
 	background-repeat: no-repeat;
-	width: 78px;
+	background-position: center;
+	width: 75px;
 	height: 18px;
 	display: grid;
 	grid-template-columns: 10px repeat(3,18px) 10px;
@@ -1725,8 +1725,6 @@ button[type=roll].sheet-rollButton::before
 	{
 		grid-area: patch3;
 	}
-
-
 
 .sheet-pathogen
 {
@@ -1775,6 +1773,7 @@ button[type=roll].sheet-rollButton::before
 	align-self: start;
 	justify-self: start;
 }
+
 .sheet-upkeepPathogenTitle
 {
 	text-align: start;
@@ -1797,6 +1796,47 @@ input[type="number"].sheet-upkeepBox
 	width: 210px;
 	font-size: 18px;
 }
+
+/* ***************************** */
+/*			Crew Kit			*/
+/* *************************** */
+.sheet-crewKitWidget
+{
+	width: 900px;
+	display: grid;
+	grid-template-columns: 540px repeat(2,1fr);
+	grid-template-rows: 1fr 1fr 1fr;
+	grid-gap: 0px;
+	height: 540px;
+	grid-template-areas: "Tools1 Augments EVASuit" "Tools2 Augments EVASuit" "Associations Associations Associations";
+	justify-content: space-evenly;
+}
+
+.sheet-Tools1
+{
+	grid-area: Tools1;
+}
+
+.sheet-Tools2
+{
+	grid-area: Tools2;
+}
+
+.sheet-Augments
+{
+	grid-area: Augments;
+}
+
+.sheet-EVASuit
+{
+	grid-area: EVASuit;
+}
+
+.sheet-Associations
+{
+	grid-area: Associations;
+}
+
 
 /* ******************************* */
 /*           Graphics              */
@@ -2245,7 +2285,7 @@ input[type="checkbox"]:checked + span.sheet-patch
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/ShipSystem.png);
 }
 
-.sheet-pulseArray
+.sheet-weaponSystem
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/PulseArray.png);
 }
