Progress on CrewKit
Got all images in... Its a little big.

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -1804,10 +1804,10 @@ input[type="number"].sheet-upkeepBox
 {
 	width: 900px;
 	display: grid;
-	grid-template-columns: 540px repeat(2,1fr);
-	grid-template-rows: 1fr 1fr 1fr;
+	grid-template-columns: 3fr 1fr 1fr;
+	grid-template-rows: 160px 160px 1fr;
 	grid-gap: 0px;
-	height: 540px;
+	height: 470px;
 	grid-template-areas: "Tools1 Augments EVASuit" "Tools2 Augments EVASuit" "Associations Associations Associations";
 	justify-content: space-evenly;
 }
@@ -1822,14 +1822,38 @@ input[type="number"].sheet-upkeepBox
 	grid-area: Tools2;
 }
 
-.sheet-Augments
-{
-	grid-area: Augments;
-}
-
 .sheet-EVASuit
 {
 	grid-area: EVASuit;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/EVAsuit.png);
+	background-size: 209.47px 314px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: minmax(6px,10px) 4fr 3fr 5fr;
+	grid-template-rows: repeat(10,15px);
+	grid-gap: 0px;
+	height: 314px;
+	width: 209px;
+	padding-top: 4px;
+	padding-left: 4px;
+	z-index: 0;
+}
+
+.sheet-Augments
+{
+	grid-area: Augments;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/augmentation.png);
+	background-size: 183px 314px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: minmax(6px,10px) 4fr 3fr 5fr;
+	grid-template-rows: repeat(10,15px);
+	grid-gap: 0px;
+	height: 314px;
+	width: 183px;
+	padding-top: 4px;
+	padding-left: 4px;
+	z-index: 0;
 }
 
 .sheet-Associations
