EA Suit Complete
Finished the Layout of the EVA Suit

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -629,8 +629,8 @@ select, textarea, input[type="text"], input[type="number"]
 	border-bottom: thin solid #D3D3D3;
 	font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
 	color: #000;
-	height: 1em;
-	line-height: 1em;
+	height: 1.25em;
+	line-height: 1.25em;
 	font-variant: normal;
 }
 
@@ -651,7 +651,7 @@ input[type="text"].sheet-full,
 input[type="number"].sheet-full,
 p.sheet-full
 {
-	width: 95%;
+	width: 98%;
 }
 
 input[type="text"].sheet-aspect,
@@ -1826,17 +1826,158 @@ input[type="number"].sheet-upkeepBox
 {
 	grid-area: EVASuit;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/EVAsuit.png);
-	background-size: 209.47px 314px;
+	background-size: 180px 314px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: minmax(6px,10px) 4fr 3fr 5fr;
-	grid-template-rows: repeat(10,15px);
+	grid-template-columns: 15px 1fr 1fr 15px 6px;
+	grid-template-rows: 24px 20px 18px 18px 16px 20px 12px 12px 18px 18px 18px 14px 10px 20px 18px 18px 20px 1fr;
 	grid-gap: 0px;
-	height: 314px;
-	width: 209px;
+	height: 312px;
+	width: 177px;
 	padding-top: 4px;
 	padding-left: 4px;
 	z-index: 0;
+}
+
+.sheet-EVATitle
+{
+	font-variant: small-caps;
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-column-end: 5;
+	margin-left: 4px;
+}
+
+
+.sheet-EVAArmourTitle
+{
+	font-variant: small-caps;
+	font-size: 13px;
+	grid-column-start: 1;
+	grid-column-end: 5;
+}
+
+.sheet-gelFunction
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 8;
+	grid-row-end: 9;
+}
+
+.sheet-EVACheckbox
+{
+	grid-column-start: 1;
+	grid-column-end: 2;
+}
+
+.sheet-EVAarmourType
+{
+	grid-column-start: 2;
+	grid-column-end: 4;
+}
+
+.sheet-EVAArmour
+{
+	grid-column-start: 4;
+	grid-column-end: 5;
+}
+
+.sheet-shipSuitTitle
+{
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-gelTitle
+{
+	grid-row-start: 6;
+	grid-row-end: 7;
+}
+
+.sheet-outerTitle
+{
+	grid-row-start: 14;
+	grid-row-end: 15;
+}
+
+.sheet-shipSuit
+{
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+
+.sheet-gelFunction
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 7;
+	grid-row-end: 8;
+	font-size: 9px;
+}
+
+.sheet-gelDetail
+{
+	grid-column-start: 3;
+	grid-column-end: 5;
+	grid-row-start: 7;
+	grid-row-end: 8;
+	font-size: 9px;
+
+}
+
+.sheet-gelDetail2
+{
+	grid-column-start: 3;
+	grid-column-end: 5;
+	grid-row-start: 8;
+	grid-row-end: 9;
+	font-size: 9px;
+}
+
+.sheet-gelBase
+{
+	grid-row-start: 9;
+	grid-row-end: 10;
+}
+
+.sheet-gelUpgrade
+{
+	grid-row-start: 10;
+	grid-row-end: 10;
+}
+
+.sheet-gelSubTitle
+{
+	grid-row-start: 12;
+	grid-row-end: 13;
+}
+
+.sheet-outerBase
+{
+	grid-row-start: 15;
+	grid-row-end: 16;
+}
+
+.sheet-outerUpgrade
+{
+	grid-row-start: 16;
+	grid-row-end: 17;
+}
+
+.sheet-outerSubTitle
+{
+	grid-row-start: 18;
+	grid-row-end: 19;
+}
+
+.sheet-armourSubTitle
+{
+	grid-column-start: 1;
+	grid-column-end: 5;
+	text-align:center;
+	font-size: 9px;
+	font-style: italic;
 }
 
 .sheet-Augments
@@ -1847,7 +1988,7 @@ input[type="number"].sheet-upkeepBox
 	background-repeat: no-repeat;
 	display: grid;
 	grid-template-columns: minmax(6px,10px) 4fr 3fr 5fr;
-	grid-template-rows: repeat(10,15px);
+	grid-template-rows: 24px 15px 15px repeat(10,1fr);
 	grid-gap: 0px;
 	height: 314px;
 	width: 183px;
@@ -1978,6 +2119,17 @@ input[type="radio"].sheet-inlineCheckboxSmall
 	vertical-align: bottom;
 }
 
+input[type="checkbox"].sheet-inlineCheckboxMedium,
+input[type="radio"].sheet-inlineCheckboxMedium
+{
+	width: 15px;
+	height: 15px;
+	margin: 0;
+	padding: 0;
+	vertical-align: bottom;
+}
+
+
 input[type="radio"].sheet-inlineCapacityCheckbox
 {
 	width: 10px;
@@ -2009,10 +2161,10 @@ input[type="radio"].sheet-inlineCapacityCheckboxSmall
 span.sheet-inlineArmour
 {
 	display: inline-block;
-	background-size: 12px 12px;
-	height: 13px;
-	width: 13px;
-	margin-left: -13px;
+	background-size: 14px 14px;
+	height: 15px;
+	width: 15px;
+	margin-left: -15px;
 }
 
 span.sheet-inlineArmourSelectors
@@ -2846,6 +2998,7 @@ input[type="number"].sheet-currentCharge
 	grid-column-end: 5;
 	grid-row-end: 5;
 	padding-left: 4px;
+	padding-top: 2px;
 }
 
 .sheet-moduleListLabCheckbox1
@@ -2866,7 +3019,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 4;
 	grid-column-end: 5;
 	grid-row-end: 5;
-	padding-left: 0px;
+	padding-top: 2px;
 }
 
 .sheet-moduleListLabCheckbox2
@@ -2918,7 +3071,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 5;
 	grid-column-end: 2;
 	grid-row-end: 6;
-	text-align: center;
+	align-self: end;
 }
 
 .sheet-moduleListFitting1
@@ -2928,6 +3081,7 @@ input[type="number"].sheet-currentCharge
 	grid-column-end: 5;
 	grid-row-start: 5;
 	grid-row-end: 6;
+	align-self: end;
 }
 
 .sheet-moduleListPips1
@@ -2947,7 +3101,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 6;
 	grid-column-end: 2;
 	grid-row-end: 7;
-	text-align: center;
+	align-self: end;
 }
 
 .sheet-moduleListFitting2
@@ -2957,6 +3111,7 @@ input[type="number"].sheet-currentCharge
 	grid-column-end: 5;
 	grid-row-start: 6;
 	grid-row-end: 7;
+	align-self: end;
 }
 
 .sheet-moduleListPips2
@@ -2976,7 +3131,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 7;
 	grid-column-end: 2;
 	grid-row-end: 8;
-	text-align: center;
+	align-self: end;
 }
 
 .sheet-moduleListFitting3
@@ -2986,6 +3141,7 @@ input[type="number"].sheet-currentCharge
 	grid-column-end: 5;
 	grid-row-start: 7;
 	grid-row-end: 8;
+	align-self: end;
 }
 
 .sheet-moduleListPips3
@@ -3005,7 +3161,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 8;
 	grid-column-end: 2;
 	grid-row-end: 9;
-	text-align: center;
+	align-self: end;
 }
 
 .sheet-moduleListFitting4
@@ -3015,6 +3171,7 @@ input[type="number"].sheet-currentCharge
 	grid-column-end: 5;
 	grid-row-start: 8;
 	grid-row-end: 9;
+	align-self: end;
 }
 
 .sheet-moduleListPips4
@@ -3034,7 +3191,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 9;
 	grid-column-end: 2;
 	grid-row-end: 10;
-	text-align: center;
+	align-self: end;
 }
 
 .sheet-moduleListFitting5
@@ -3044,6 +3201,7 @@ input[type="number"].sheet-currentCharge
 	grid-column-end: 5;
 	grid-row-start: 9;
 	grid-row-end: 10;
+	align-self: end;
 }
 
 .sheet-moduleListPips5
@@ -3063,7 +3221,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 10;
 	grid-column-end: 2;
 	grid-row-end: 11;
-	text-align: center;
+	align-self: end;
 }
 
 .sheet-moduleListFitting6
@@ -3073,6 +3231,7 @@ input[type="number"].sheet-currentCharge
 	grid-column-end: 5;
 	grid-row-start: 10;
 	grid-row-end: 11;
+	align-self: end;
 }
 
 .sheet-moduleListArmour6
@@ -3093,8 +3252,8 @@ input[type="number"].sheet-currentCharge
 	background-size: 370px 335px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: 14px 42px repeat(3,1fr) 14px 44px 30px 18px 32px;
-	grid-template-rows: 15px repeat(2,12px) 15px repeat(2,12px) repeat(5,minmax(12px, 15px)) 20px repeat(7,minmax(12px,15px)) 1fr 1fr;
+	grid-template-columns: 14px 40px 60px 60px 50px 14px 42px 42px 24px 25px;
+	grid-template-rows: 15px repeat(2,12px) 15px repeat(2,12px) repeat(5,minmax(12px, 15px)) 20px repeat(9,minmax(12px,15px))1fr;
 	grid-gap: 0px;
 	height: 335px;
 	width: 362px;
@@ -3222,7 +3381,7 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 7;
 	grid-row-end: 8;
 	align-self: start;
-	justify-self: end;
+	justify-self: center;
 	flex-wrap: nowrap;
 	font-size: 8px;
 }
