--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -1804,10 +1804,10 @@ input[type="number"].sheet-upkeepBox
 {
 	width: 900px;
 	display: grid;
-	grid-template-columns: 3fr 1fr 1fr;
-	grid-template-rows: 160px 160px 1fr;
-	grid-gap: 0px;
-	height: 470px;
+	grid-template-columns: 540px 184px 181px;
+	grid-template-rows: 155px 155px 1fr;
+	grid-gap: 4px;
+	height: 582px;
 	grid-template-areas: "Tools1 Augments EVASuit" "Tools2 Augments EVASuit" "Associations Associations Associations";
 	justify-content: space-evenly;
 }
@@ -1829,7 +1829,7 @@ input[type="number"].sheet-upkeepBox
 	background-size: 180px 314px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: 15px 1fr 1fr 15px 6px;
+	grid-template-columns: 15px 60px 1fr 15px 6px;
 	grid-template-rows: 24px 20px 18px 18px 16px 20px 12px 12px 18px 18px 18px 14px 10px 20px 18px 18px 20px 1fr;
 	grid-gap: 0px;
 	height: 312px;
@@ -1987,33 +1987,245 @@ input[type="number"].sheet-upkeepBox
 	background-size: 183px 314px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: minmax(6px,10px) 4fr 3fr 5fr;
-	grid-template-rows: 24px 15px 15px repeat(10,1fr);
+	grid-template-columns: 1fr 1fr 25px 6px;
+	grid-template-rows: 18px 15px 15px repeat(11,1fr);
 	grid-gap: 0px;
 	height: 314px;
-	width: 183px;
+	width: 180px;
 	padding-top: 4px;
 	padding-left: 4px;
 	z-index: 0;
 }
 
+.sheet-augmentationTitle
+{
+	font-variant: small-caps;
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-column-end: 4;
+	margin-left: 4px;
+}
+
+.sheet-augmentationDetail1
+{
+	grid-column-start: 1;
+	grid-column-end: 5;
+	grid-row-start: 2;
+	grid-row-end: 3;
+	font-size: 9px;
+	padding-left: 7px;
+}
+
+.sheet-augmentationDetail2
+{
+	grid-column-start: 1;
+	grid-column-end: 5;
+	grid-row-start: 3;
+	grid-row-end: 4;
+	font-size: 9px;
+	padding-left: 7px;
+}
+
+.sheet-augmentsTitle
+{
+	grid-column-start: 1;
+	grid-column-end: 5;
+	grid-row-start: 4;
+	grid-row-end: 5;
+	font-variant: small-caps;
+	font-size: 13px;
+}
+
+.sheet-augmentName
+{
+	grid-column-start: 1;
+	grid-column-end: 3;
+}
+.sheet-augmentPips
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+	justify-self: end;
+}
+
+.sheet-augment1
+{
+	grid-row-start: 5;
+	grid-row-end: 6;
+}
+
+.sheet-augment2
+{
+	grid-row-start: 6;
+	grid-row-end: 7;
+}
+
+.sheet-augment3
+{
+	grid-row-start: 7;
+	grid-row-end: 8;
+}
+
+.sheet-augment4
+{
+	grid-row-start: 8;
+	grid-row-end: 9;
+}
+
+.sheet-augment5
+{
+	grid-row-start: 9;
+	grid-row-end: 10;
+}
+
+.sheet-augment6
+{
+	grid-row-start: 10;
+	grid-row-end: 11;
+}
+
+.sheet-augment7
+{
+	grid-row-start: 11;
+	grid-row-end: 12;
+}
+
+.sheet-augment8
+{
+	grid-row-start: 12;
+	grid-row-end: 13;
+}
+
+.sheet-augment9
+{
+	grid-row-start: 13;
+	grid-row-end: 14;
+}
+
 .sheet-Associations
 {
 	grid-area: Associations;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/associations.png);
+	background-size: 910px 265px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: 10px 1fr 1fr;
+	grid-template-rows: 20px 16px 20px repeat(11,1fr);
+	grid-gap: 0px;
+	height: 265px;
+	width: 905px;
+	padding-top: 4px;
+	padding-left: 6px;
+	z-index: 0;
 }
 
-
-/* ******************************* */
-/*           Graphics              */
-/* ******************************* */
-/* Hide Checkboxes and Radio boxes */
-input[type="checkbox"].sheet-hideCheckbox,
-input[type="radio"].sheet-hideCheckbox
+.sheet-associationsTitle
 {
-	opacity: 0;
-	cursor: pointer;
-	z-index: 3;
+	font-variant: small-caps;
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-column-end: 4;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	margin-left: 4px;
 }
+
+.sheet-associationsDetail
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 2;
+	grid-row-end: 3;
+	font-size: 9px;
+}
+
+.sheet-associationSubtitle
+{
+	grid-row-start: 3;
+	grid-row-end: 4;
+	font-variant: small-caps;
+	font-size: 13px;
+}
+
+.sheet-associationA
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+}
+
+.sheet-associationB
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+}
+
+.sheet-association1
+{
+	grid-row-start: 4;
+	grid-row-end: 5;
+}
+
+.sheet-association2
+{
+	grid-row-start: 5;
+	grid-row-end: 6;
+}
+
+.sheet-association3
+{
+	grid-row-start: 6;
+	grid-row-end: 7;
+}
+
+.sheet-association4
+{
+	grid-row-start: 7;
+	grid-row-end: 8;
+}
+
+.sheet-association5
+{
+	grid-row-start: 8;
+	grid-row-end: 9;
+}
+
+.sheet-association6
+{
+	grid-row-start: 9;
+	grid-row-end: 10;
+}
+.sheet-association7
+{
+	grid-row-start: 10;
+	grid-row-end: 11;
+}
+.sheet-association8
+{
+	grid-row-start: 11;
+	grid-row-end: 12;
+}
+.sheet-association9
+{
+	grid-row-start: 12;
+	grid-row-end: 13;
+}
+.sheet-association0
+{
+	grid-row-start: 13;
+	grid-row-end: 14;
+}
+
+	/* ******************************* */
+	/*           Graphics              */
+	/* ******************************* */
+	/* Hide Checkboxes and Radio boxes */
+	input[type="checkbox"].sheet-hideCheckbox,
+	input[type="radio"].sheet-hideCheckbox
+	{
+		opacity: 0;
+		cursor: pointer;
+		z-index: 3;
+	}
 
 /* Subgrid for Tug Conditions */
 .sheet-launch-bay-tug-conditions
@@ -2103,7 +2315,7 @@ input[type="checkbox"].sheet-inlineCheckbox,
 input[type="radio"].sheet-inlineCheckbox
 {
 	width: 13px;
-	height: 13px;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	vertical-align: bottom;
@@ -2113,7 +2325,7 @@ input[type="checkbox"].sheet-inlineCheckboxSmall,
 input[type="radio"].sheet-inlineCheckboxSmall
 {
 	width: 8px;
-	height: 13px;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	vertical-align: bottom;
@@ -2123,7 +2335,7 @@ input[type="checkbox"].sheet-inlineCheckboxMedium,
 input[type="radio"].sheet-inlineCheckboxMedium
 {
 	width: 15px;
-	height: 15px;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	vertical-align: bottom;
@@ -2133,7 +2345,7 @@ input[type="radio"].sheet-inlineCheckboxMedium
 input[type="radio"].sheet-inlineCapacityCheckbox
 {
 	width: 10px;
-	height: 15px;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	vertical-align: middle;
@@ -2142,7 +2354,7 @@ input[type="radio"].sheet-inlineCapacityCheckbox
 input[type="radio"].sheet-inlinePipCheckbox
 {
 	width: 10px;
-	height: 12px;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	vertical-align: middle;
@@ -2151,7 +2363,7 @@ input[type="radio"].sheet-inlinePipCheckbox
 input[type="radio"].sheet-inlineCapacityCheckboxSmall
 {
 	width: 8px;
-	height: 12px;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	vertical-align: middle;
@@ -3419,7 +3631,7 @@ input[type="number"].sheet-tugReactorCharge
 .sheet-launchBayOverchargeSymbol
 {
 	grid-column-start: 8;
-	grid-column-end: 10;
+	grid-column-end: 9;
 	grid-row-start: 9;
 	grid-row-end: 11;
 	text-align: center;
